--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "graphql": "^15.3.0",
     "graphql-tools": "^6.2.5",
     "merge-graphql-schemas": "^1.7.8",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "mongoose": "^5.10.10",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.15",
